--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@hapi/vision": "^6.1.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "cleave.js": "^1.6.0",
     "dotenv": "^10.0.0",
     "generate-password": "^1.6.0",
     "handlebars": "^4.7.7",
